<resources>
    <string name="app_name">GameSale</string>
    <string name="title_activity_steam_lookup">SteamLookup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_the_steam_game_sale_tracker">Welcome to the Steam Game Sale tracker</string>
    <string name="click_to_start">Click To Start</string>
    <string name="todo">TODO</string>
    <string name="price_results">Price results</string>
    <string name="when_are_the_sales">When are the sales?</string>
    <string name="click_to_search_above_game">Click To Search Above Game</string>
    <string name="steam_look_up_page">Steam Look Up Page</string>
    <string name="average_acheivements_completed_in_game_show_here">Average Acheivements Completed in Game show here</string>
    <string name="game_to_search">game to search</string>
    <string name="big_sales">Big Sales</string>
    <string name="aug_28_sep_4_2023_strategy_fest">Aug 28 - Sep 4, 2023: Strategy Fest</string>
    <string name="aug_7_aug_14_2023_visual_novel_fest">Aug 7 - Aug 14, 2023: Visual Novel Fest</string>
    <string name="sep_25_oct_2_2023_shmup_fes">Sep 25 - Oct 2, 2023: SHMUP Fes</string>
    <string name="oct_26_nov_2_2023_scream_fest">Oct 26 - Nov 2, 2023: Scream Fest</string>
    <string name="jul_24_jul_31_2023_stealth_fest">Jul 24 - Jul 31, 2023: Stealth Fest</string>
    <string name="smaller_sales">Smaller sales</string>
    <string name="dec_21_2023_jan_4_2024_steam_winter_sale">Dec 21, 2023 - Jan 4, 2024: Steam Winter Sale</string>
    <string name="nov_21_nov_28_2023_steam_autumn_sale">Nov 21 - Nov 28, 2023: Steam Autumn Sale</string>
    <string name="jun_29_jul_13_2023_steam_summer_sale">Jun 29 - Jul 13, 2023: Steam Summer Sale</string>
    <string name="back">Back</string>
    <string name="average_acheivements">average acheivements</string>
</resources>