<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".SteamSalesTimes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="209dp"
            android:layout_height="162dp"
            android:layout_marginStart="101dp"
            android:layout_marginEnd="101dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/screenshot_2023_06_04_144013" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@color/black"
            tools:layout_editor_absoluteY="162dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="196dp"
                android:layout_height="29dp"
                android:layout_marginStart="107dp"
                android:layout_marginEnd="108dp"
                android:text="@string/big_sales"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#4CAF50"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jun_29_jul_13_2023_steam_summer_sale"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="232dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nov_21_nov_28_2023_steam_autumn_sale"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="271dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dec_21_2023_jan_4_2024_steam_winter_sale"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="306dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@color/black"
            tools:layout_editor_absoluteY="383dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginEnd="145dp"
                android:text="@string/smaller_sales"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#4CAF50"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="397dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jul_24_jul_31_2023_stealth_fest"
            android:textSize="18sp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="450dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aug_7_aug_14_2023_visual_novel_fest"
            android:textSize="18sp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="566dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aug_28_sep_4_2023_strategy_fest"
            android:textSize="18sp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="479dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sep_25_oct_2_2023_shmup_fes"
            android:textSize="18sp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="532dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oct_26_nov_2_2023_scream_fest"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="615dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:textColor="#2196F3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>